<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hoja1"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvsubtitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/artifika"
        android:gravity="center"
        android:text="@string/es_subtitulo"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="187dp"
        android:layout_height="54dp"
        android:autofillHints="name"
        android:ems="10"
        android:fontFamily="@font/bryndanwrite"
        android:gravity="center"
        android:hint="@string/hintnombre"
        android:inputType="text"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26999998" />

    <EditText
        android:id="@+id/etApellido"
        android:layout_width="187dp"
        android:layout_height="54dp"
        android:autofillHints="name"
        android:ems="10"
        android:fontFamily="@font/bryndanwrite"
        android:gravity="center"
        android:hint="@string/hintap"
        android:inputType="text"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.36" />



    <EditText
        android:id="@+id/etFechaN"
        android:layout_width="187dp"
        android:layout_height="54dp"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:fontFamily="@font/bryndanwrite"
        android:gravity="center"
        android:hint="@string/hintfecha"
        android:importantForAutofill="no"
        android:inputType="date|text"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.451" />

    <TextView
        android:id="@+id/tvFecha"
        android:layout_width="187dp"
        android:layout_height="54dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />


    <EditText
        android:id="@+id/etCorreo"
        android:layout_width="187dp"
        android:layout_height="54dp"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:fontFamily="@font/bryndanwrite"
        android:gravity="center"
        android:hint="@string/hintcorreo"
        android:inputType="textWebEmailAddress|text"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.543" />

    <EditText
        android:id="@+id/etCuenta"
        android:layout_width="187dp"
        android:layout_height="54dp"
        android:ems="10"
        android:fontFamily="@font/bryndanwrite"
        android:gravity="center"
        android:hint="@string/hintcuenta"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="9"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.639" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="186dp"
        android:layout_height="50dp"
        android:contentDescription="@string/spinner"
        android:contextClickable="true"
        android:dropDownWidth="wrap_content"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.57"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.724" />

    <Button
        android:id="@+id/btnVerificar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#36885D"
        android:fontFamily="@font/artifika"
        android:onClick="click"
        android:text="@string/verificar"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.834" />


</androidx.constraintlayout.widget.ConstraintLayout>